fix: Improved scrollbar style and adding more padding to table

--- a/packages/nc-gui/ee/assets/style.scss
+++ b/packages/nc-gui/ee/assets/style.scss
@@ -49,7 +49,7 @@ main {
 }
 
 .mobile {
-  .nc-scrollbar-md, .nc-scrollbar-dark-md, .nc-scrollbar-dark-md, .nc-scrollbar-sm-dark, .nc-scrollbar-x-md, .nc-scrollbar-x-md-dark {
+  .nc-scrollbar-md, .nc-scrollbar-x-md, .nc-scrollbar-dark-md, .nc-scrollbar-x-md-dark, .nc-scrollbar-x-lg {
     &::-webkit-scrollbar {
       width: 0px;
     }
@@ -71,6 +71,32 @@ main {
     @apply bg-transparent;
   }
   &::-webkit-scrollbar-thumb {
+    width: 4px;
+    @apply bg-gray-200;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-300;
+  }
+}
+
+.nc-scrollbar-x-md {
+  overflow-x: scroll;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+  &::-webkit-scrollbar-track-piece {
+    width: 0px;
+  }
+  &::-webkit-scrollbar {
+    @apply bg-transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+
+
     width: 4px;
     @apply bg-gray-200;
   }
@@ -110,51 +136,6 @@ main {
   }
 }
 
-.nc-scrollbar-sm-dark {
-  overflow-y: scroll;
-  overflow-x: hidden;
-
-  &::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
-  }
-  &::-webkit-scrollbar-track-piece {
-    width: 0px;
-  }
-  &::-webkit-scrollbar {
-    @apply bg-transparent;
-  }
-  &::-webkit-scrollbar-thumb {
-    width: 4px;
-    @apply bg-gray-300;
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-400;
-  }
-}
-
-.nc-scrollbar-x-md {
-  overflow-x: scroll;
-
-  &::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
-  }
-  &::-webkit-scrollbar-track-piece {
-    width: 0px;
-  }
-  &::-webkit-scrollbar {
-    @apply bg-transparent;
-  }
-  &::-webkit-scrollbar-thumb {
-    width: 4px;
-    @apply bg-gray-100;
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-200;
-  }
-}
-
 .nc-scrollbar-x-md-dark {
   overflow-x: scroll;
 
@@ -169,11 +150,43 @@ main {
     @apply bg-transparent;
   }
   &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+
+
     width: 4px;
-    @apply bg-gray-300 !bg-opacity-100;
+    background-color: rgba(0, 0, 0, 0.3)
+
   }
   &::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-400;
+    background-color: rgba(0, 0, 0, 0.4)
+
+  }
+}
+
+.nc-scrollbar-x-lg {
+  overflow-x: scroll;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  &::-webkit-scrollbar-track-piece {
+    width: 0px;
+  }
+  &::-webkit-scrollbar {
+    @apply bg-transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+
+
+    width: 6px;
+    @apply bg-gray-200;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-300;
   }
 }
 
